# autophage-engine

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  README.md
.github/workflows/: ci.yml
.opencode/agents/: cpp-expert.md  go-expert.md  govern-expert.md
.opencode/skills/horizon-assets/: SKILL.md
.opencode/skills/horizon-cpp/: SKILL.md
.opencode/skills/horizon-ecs/: SKILL.md
.opencode/skills/horizon-physics/: SKILL.md
.opencode/skills/horizon-renderer/: SKILL.md
.opencode/skills/horizon-ui/: SKILL.md
benchmarks/: CMakeLists.txt  bench_memory.cpp  bench_profiler.cpp
docs/: ROADMAP.md  autophage_engine_technical_documentation.md
examples/: CMakeLists.txt  main.cpp
include/autophage/analyzer/: access_pattern_tracker.hpp  stats_collector.hpp
include/autophage/core/: assert.hpp  event.hpp  logger.hpp  memory.hpp  platform.hpp  type_id.hpp  types.hpp
include/autophage/ecs/: component_storage.hpp  components.hpp  entity.hpp  query.hpp  system.hpp  systems.hpp  world.hpp
include/autophage/ecs/systems/: physics_system.hpp  render_system.hpp
include/autophage/optimizer/: optimizer.hpp
include/autophage/profiler/: profiler.hpp  scoped_timer.hpp
include/autophage/rewriter/: hot_swap_manager.hpp  jit_compiler.hpp  rewriter.hpp
include/autophage/window/: window.hpp
src/analyzer/: CMakeLists.txt  access_pattern_tracker.cpp  stats_collector.cpp
src/core/: CMakeLists.txt  logger.cpp  memory.cpp  platform.cpp
src/ecs/: CMakeLists.txt  ecs.cpp  ecs_debug.cpp
src/ecs/systems/: physics_system.cpp  render_system.cpp
src/optimizer/: CMakeLists.txt  optimizer.cpp
src/profiler/: CMakeLists.txt  profiler.cpp  scoped_timer.cpp
src/rewriter/: CMakeLists.txt  hot_swap_manager.cpp  jit_compiler.cpp  rewriter.cpp
src/window/: CMakeLists.txt  window_sdl.cpp
tests/: CMakeLists.txt
tests/core/: test_event.cpp  test_logger.cpp  test_memory.cpp  test_types.cpp
tests/ecs/: benchmark_ecs.cpp  test_component.cpp  test_entity.cpp  test_system.cpp  test_world.cpp
tests/profiler/: test_profiler.cpp  test_scoped_timer.cpp
